Basic roster and user endpoints
